@@ -7,6 +7,7 @@ x.x:
 - fixed: issue when assigning subsite admins during creation didn't give them the correct rights
 - fixed: missing support for some group_tools options
 - fixed: running deactivation scripts could break other subsites
+- fixed: subsite admins could access translation_editor
 - changed: subsite admin listing now has pagination
 
 2.4 (2014-02-19):
